--- a/index.html
+++ b/index.html
@@ -1,14 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="./css/style.css">
-  <script type="text/javascript" src="./js/index.js"></script>
-  <title>Ironhack cart</title>
-</head>
-<body>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./css/normalize.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <script type="text/javascript" src="./js/index.js"></script>
+    <title>Ironhack cart</title>
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="line1">
+        <h1 class="title">Ironhack Merchandising Shop</h1>
+      </div>
+      <div class="line2">
+        <div class="product-name">
+          <span>IronBubble-head</span>
+        </div>
+        <div>
+          <span class="pricePerUnit">25.00</span>
+        </div>
+        <div>
+          <label>QTY</label>
+          <input type="countUnits" placeholder="0" class="qty" />
+        </div>
+        <div>
+          <span class="total-price-for-this-product">0</span>
+        </div>
+        <div class="button">
+          <button class="btn-delete" onclick="deleteItem()">Delete</button>
+        </div>
+      </div>
+      <div class="line2">
+        <div class="product-name">
+          <span>IronShirt</span>
+        </div>
+        <div>
+          <span class="pricePerUnit">15.00</span>
+        </div>
+        <div>
+          <label>QTY</label>
+          <input type="countUnits" placeholder="0" class="qty" />
+        </div>
+        <div>
+          <span class="total-price-for-this-product">0</span>
+        </div>
+        <div class="button">
+          <button class="btn-delete" onclick="deleteItem()">Delete</button>
+        </div>
+      </div>
+
+      <div>
+        <input type="new-name" class="new-name" />
+        <input type="new-price" class="new-price" />
+        <button class="add-item" onclick="createNewItemRow()">Create</button>
+      </div>
+
+      <div class="line3">
+        <button class="btn-success" onclick="getTotalPrice()">
+          Calculate Prices
+        </button>
+      </div>
+      <div>
+        <h2>Total Price: <span class="total-of-products">0</span></h2>
+      </div>
+    </div>
+    <script src="./js/index.js"></script>
+  </body>
 </html>
