--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
       </div>
 
-      <div>
+      <div class="create-line">
         <input type="new-name" class="new-name" />
         <input type="new-price" class="new-price" />
         <button class="add-item" onclick="createNewItemRow()">Create</button>
